# vaultify

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix  rust-toolchain.toml  test.secrets
.github/workflows/: build.yml  release.yml
src/: error.rs  main.rs  process.rs  secrets.rs  vault.rs
supply-chain/: audits.toml  config.toml
tests/: child.secrets  child.sh  pass.secrets
