[package]
name = "vaultify"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "signal", "rt"] }
futures = "0.3"

# cli
clap = { version = "4", features = ["cargo", "derive", "env"] }

# .secrets parsing
lazy_static = "1.5"
regex = "1.11"

# accessing vault
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "json"] }
