[package]
name = "vaultify"
version = "0.1.0"
authors = ["Patrick Jeremic <pjeremic@chorus.one>"]
edition = "2021"
description = "wraps any process in a set of environment variables fetched from vault"
readme = "README.md"
repository = "https://github.com/ChorusOne/vaultify"
rust-version = "1.79"

[dependencies]
log = "0.4"
env_logger = "0.11"
thiserror = "2.0"
tokio = { version = "1.40", default-features = false, features = ["macros", "rt", "fs"] }
futures = "0.3"

# cli
clap = { version = "4", features = ["cargo", "derive", "env"] }

# .secrets parsing
lazy_static = "1.5"
regex = "1.11"

# accessing vault
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "json"] }

# process execution
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process"] }

